--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.3
+  image_picker: ^1.1.2
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
