--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.3
   image_picker: ^1.1.2
-  video_player: ^2.9.2
+  url_launcher: ^6.3.1
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
