--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
+  provider: ^6.1.2
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
   video_player: ^2.9.2
