--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   firebase_storage: ^12.3.3
   flutter:
     sdk: flutter
+  flutter_localization: ^0.2.2
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
+  localization: ^2.1.1
   provider: ^6.1.2
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
