--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter:
+    sdk: flutter
+  
   cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.3
-  flutter:
-    sdk: flutter
   flutter_localization: ^0.2.2
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
   localization: ^2.1.1
+  path: ^1.9.0
   provider: ^6.1.2
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
