--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
   cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
@@ -39,7 +38,7 @@ dependencies:
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
   video_player: ^2.9.2
-  mapbox_gl: ^0.13.0
+  # mapbox_gl: ^0.13.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
