--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,25 +10,28 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
-  flutter:
-    sdk: flutter
   cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.3
+  flutter:
+    sdk: flutter
   flutter_localization: ^0.2.2
+  flutter_localizations:
+    sdk: flutter
+  flutter_map: ^7.0.2
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
+  intl: any
+  latlong2: ^0.9.1
   localization: ^2.1.1
+  mapbox_maps_flutter: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.2
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
   video_player: ^2.9.2
-  intl: any
-  flutter_localizations:
-    sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^5.0.0
