--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,6 @@ name: cyberprop
 description: 'Aplikasi Properti.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
@@ -11,6 +10,7 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  camera: ^0.11.0+2
   cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.1
