--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,13 @@ dependencies:
   latlong2: ^0.9.1
   localization: ^2.1.1
   path: ^1.9.0
+  path_provider: ^2.1.5
   provider: ^6.1.2
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
   video_player: ^2.9.2
+  permission_handler: ^11.3.1
+  firebase_app_check: ^0.3.1+7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
