--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   video_player: ^2.9.2
   permission_handler: ^11.3.1
   firebase_app_check: ^0.3.1+7
+  awesome_notifications: ^0.10.0
+  google_mobile_ads: ^5.2.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
