--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_app_check: ^0.3.1+7
   awesome_notifications: ^0.10.0
   google_mobile_ads: ^5.2.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_lints: ^5.0.0
